--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,15 @@
 {
-  "window.zoomLevel": 0,
-  "python.languageServer": "Pylance", // ms-python.vscode-pylance
-  "python.testing.unittestEnabled": false, // ms-python.python
-  "python.testing.pytestEnabled": true,
-  "python.testing.pytestArgs": [], // -x to bail
-  "python.defaultInterpreterPath": "venv/bin/python",
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": true,
+  "python.analysis.autoImportCompletions": true,
+  "python.analysis.typeCheckingMode": "basic",
+  "python.envFile": "${workspaceFolder}/dotenv_files/.env",
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": "explicit",
+    "source.addMissingImports": "explicit",
+    "source.organizeImports": "explicit"
+  },
+  "editor.indentSize": 2,
   "prettier.tabWidth": 2,
   "prettier.useTabs": false,
   "prettier.semi": false,
@@ -12,8 +17,11 @@
   "prettier.jsxSingleQuote": false,
   "prettier.trailingComma": "es5",
   "prettier.arrowParens": "always",
+  "[json]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
   "[python]": {
-    "editor.defaultFormatter": "ms-python.black-formatter", // ms-python.python
+    "editor.defaultFormatter": "ms-python.black-formatter",
     "editor.tabSize": 4,
     "editor.insertSpaces": true,
     "editor.formatOnSave": true,
@@ -22,26 +30,22 @@
       "source.organizeImports": "explicit"
     }
   },
-  "[json]": {
+  "[django-html]": {
+    "editor.defaultFormatter": "monosans.djlint"
+  },
+  "[django-txt]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "[html]": {
-    "editor.formatOnSave": true,
-    "editor.defaultFormatter": "vscode.html-language-features",
-    "editor.quickSuggestions": {
-      "other": true,
-      "comments": true,
-      "strings": true
-    }
+  "emmet.includeLanguages": { "django-html": "html" },
+  "files.exclude": {
+    "**/__pycache__": true,
+    "**/*.pyc": true,
+    "**/migrations": false
   },
-  "[django-html]": {
-    "editor.formatOnSave": false,
-    "editor.defaultFormatter": "vscode.html-language-features",
-    "editor.quickSuggestions": {
-      "other": true,
-      "comments": true,
-      "strings": true
-    }
+  "search.exclude": {
+    "**/__pycache__": true,
+    "**/*.pyc": true,
+    "**/migrations": true
   },
   "files.associations": {
     "*.js": "javascript",
@@ -49,15 +53,12 @@
     "*.xml": "html",
     "*.svg": "html",
     "*.html": "html",
-    "django-html": "html", // batisteo.vscode-django
+    "django-html": "html",
     "**/*.html": "html",
     "**/templates/**/*.html": "django-html",
     "**/base_templates/**/*.html": "django-html",
     "**/requirements{/**,*}.{txt,in}": "pip-requirements"
   },
-  "emmet.includeLanguages": {
-    "django-html": "html", // batisteo.vscode-django
-    "javascript": "javascriptreact",
-    "typescript": "typescriptreact"
-  }
+  "djlint.showInstallError": false,
+  "djlint.ignore": "H030,H031" // comment if in production
 }
