--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 asgiref==3.9.1
+attrs==25.3.0
+certifi==2025.8.3
+cffi==2.0.0
 click==8.3.0
 colorama==0.4.6
 coverage==7.10.7
@@ -6,21 +9,35 @@ cssbeautifier==1.15.4
 Django==5.2.6
 djlint==1.36.4
 EditorConfig==0.17.1
+h11==0.16.0
+idna==3.10
 iniconfig==2.1.0
 jsbeautifier==1.15.4
 json5==0.12.1
+outcome==1.3.0.post0
 packaging==25.0
 parameterized==0.9.0
 pathspec==0.12.1
 pillow==11.3.0
 pluggy==1.6.0
+pycparser==2.23
 Pygments==2.19.2
+PySocks==1.7.1
 pytest==8.4.2
 pytest-django==4.11.1
 python-dotenv==1.1.1
 PyYAML==6.0.2
 regex==2025.9.18
+selenium==4.35.0
 six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
 sqlparse==0.5.3
 tqdm==4.67.1
+trio==0.30.0
+trio-websocket==0.12.2
+typing_extensions==4.14.1
 tzdata==2025.2
+urllib3==2.5.0
+websocket-client==1.8.0
+wsproto==1.2.0
