testes do formulário login

--- a/pytest.ini
+++ b/pytest.ini
@@ -9,3 +9,5 @@ markers =
   slow: Run tests that are slow
   fast: Run fast tests
   functional_test: Run functional based tests
+  unit_test: Run unit tests
+  integration_test: Run integration tests
