--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.9.1
 attrs==25.3.0
+autopep8==2.3.2
 certifi==2025.8.3
 cffi==2.0.0
 click==8.3.0
@@ -7,20 +8,27 @@ colorama==0.4.6
 coverage==7.10.7
 cssbeautifier==1.15.4
 Django==5.2.6
+django-debug-toolbar==6.0.0
 djlint==1.36.4
+dotenv==0.9.9
 EditorConfig==0.17.1
+Faker==37.6.0
+flake8==7.3.0
 h11==0.16.0
 idna==3.10
 iniconfig==2.1.0
 jsbeautifier==1.15.4
 json5==0.12.1
+mccabe==0.7.0
 outcome==1.3.0.post0
 packaging==25.0
 parameterized==0.9.0
 pathspec==0.12.1
 pillow==11.3.0
 pluggy==1.6.0
+pycodestyle==2.14.0
 pycparser==2.23
+pyflakes==3.4.0
 Pygments==2.19.2
 PySocks==1.7.1
 pytest==8.4.2
